<resources>
    <string name="USER_ID_KEY">USER_ID</string>
    <string name="USER_ROLE_KEY">USER_ROLE</string>
    <string name="ACCESS_TOKEN_KEY">ACCESS_TOKEN</string>
    <string name="app_name">YerbApp</string>
    <string name="TRAINING">Instruktaż</string>
    <string name="EXPLORE">Odkrywaj</string>
    <string name="PROFILE">Profil</string>
    <string name="LOGIN">Login</string>
    <string name="PASSWORD">Hasło</string>
    <string name="REGISTER">Zarejestruj się</string>
    <string name="BAD_RESPONSE">Wystąpił błąd. Spróbuj ponownie później.</string>
    <string name="PASSWORD_EMPTY">Hasło nie może być puste</string>
    <string name="USERNAME_EMPTY">Login nie może być pusty</string>
    <string name="EMAIL_EMPTY">Email nie może być pusty</string>
    <string name="INVALID_CREDENTIALS">Nieprawidłowe dane logowania</string>
    <string name="USER_NOT_FOUND">Taki użytkownik nie istnieje</string>
    <string name="ERROR">Wystąpił błąd. \nSprawdź swoje połączenia z internetem.</string>
    <string name="NO_INTERNET">Nie masz połączenia z internetem.\nSpróbuj ponownie później.</string>
    <string name="LOADING">Ładowanie</string>
    <string name="USERNAME_TOO_SHORT">Login musi się składać co najmniej z 7 znaków</string>
    <string name="PASSWORD_TOO_SHORT">Hasło musi się składać co najmniej z 8 znaków</string>
    <string name="EMAIL_BAD_PATTER">Email ma nieprawdiłowy format</string>
    <string name="AROMA">Aromat</string>
    <string name="TASTE">Smak</string>
    <string name="ENERGY">Pobudzenie</string>
    <string name="BITTERNESS">Gorycz</string>
    <string name="PRICE">Cena</string>
    <string name="OVERALL">Ogólna ocena</string>
    <string name="USERNAME">Nazwa użytkownika</string>
    <string name="EMAIL">Email</string>
    <string name="RANK">Miejsce w rankingu</string>
    <string name="EDIT">Edytuj</string>
    <string name="SAVE">Zapisz</string>
    <string name="LOGOUT">Wyloguj</string>
    <string name="PREFERENCES">Moje preferencje</string>
    <string name="UNAUTHORIZED">Przepraszamy, Twoja sesja wygasła.\nZaloguj się do aplikacji.</string>
    <string name="COUNTRY">Kraj pochodzenia</string>
    <string name="MANUFACTURER">Producent</string>
    <string name="TYPE">Typ</string>
    <string name="PRODUCT_NAME">Nazwa produktu</string>
    <string name="DETAILS">Szczegóły</string>
    <string name="ADD">Dodaj</string>
    <string name="GALLERY">Galeria</string>
    <string name="PRODUCT_NAME_EMPTY">Nazwa produktu nie może być pusta</string>
    <string name="PRODUCT_ADDED">Produkt został dodany!</string>
    <string name="REMOVE">Usuń</string>
    <string name="START_TUTORIAL">Rozpocznij istruktaż</string>
    <string name="NEXT">Dalej</string>
    <string name="TUTORIAL_1">Przygotuj wszystkie niezbędne rzeczy. Potrzebne będą: naczynie, czyli matero, bombilla - słomka z sitkiem oraz oczywiście yerba mate.</string>
    <string name="TUTORIAL_2">Przesyp yerba mate do matera. Ilość suszu wpływa na moc napoju, dlatego początkującym polecamy zacząć od zasypania połowy objętości naczynia. Z biegiem czasu z pewnością sam poznasz jaka ilość yerby najbardziej odpowiada twoim preferencjom.</string>
    <string name="TUTORIAL_3">Przykryj naczynie dłonią, spodeczkiem lub podkładką, a następnie potrząśnij kilka razy w górę i w dół trzymając je do góry nogami.</string>
    <string name="TUTORIAL_4">Przechyl naczynie w taki sposób, aby susz ułożył się po jednej stronie tworząc mały kopiec.</string>
    <string name="TUTORIAL_5">Wetknij bombillę w wolne miejsce między ścianką naczynia a kopcem z suszu, a następnie wlej wodę w temperaturze około 70-80 stopni. Pamietaj, aby nie mieszać napoju.</string>
    <string name="TUTORIAL_6">Tak przygotowaną yerba mate pozostaw na około 2-3 minuty, zaraz potem śmiało możesz zacząć delektować się swoim napojem!</string>
    <string name="PREVIOUS">Cofnij</string>
    <string name="SEARCH">Wyszukaj...</string>
    <string name="TYPE_EMPTY">Wybierz typ produktu</string>
    <string name="MANUFACTURER_EMPTY">Wybierz producenta</string>
    <string name="PRODUCT_DETAILS">Szczegóły produktu</string>
    <string name="REGISTRATION">Rejestracja</string>
    <string name="ADD_PRODUCT">Dodaj produkt</string>
    <string name="NUMBER_REVIEWS">na %d oceny</string>


</resources>
