<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.polsl.yerbapp.presentation.ui.explore.add_product.AddProductViewModel">

    <data>

        <variable
            name="viewmodel"
            type="com.polsl.yerbapp.presentation.ui.explore.add_product.AddProductViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/layout_main_margin">

            <ImageView
                android:id="@+id/ivPhoto"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:orientation="horizontal"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_add_photo"
                app:addProductImage="@{viewmodel.productImagePath}"
                app:layout_constraintDimensionRatio="4:3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnRemovePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:onClick="@{() -> viewmodel.onRemovePhotoClick()}"
                android:src="@drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="@id/ivPhoto"
                app:layout_constraintStart_toStartOf="parent"
                app:visible="@{viewmodel.isImageSet}" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/PRODUCT_NAME"
                android:text="@={viewmodel.nameInput}"
                android:textSize="@dimen/large_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRemovePhoto" />

            <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
                android:id="@+id/sType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etName"
                app:smsp_isSearchable="true"
                app:smsp_enableSearchHeader="false"
                app:smsp_searchHint="@string/SEARCH"
                app:smsp_hint="@string/TYPE"
                app:smsp_selectedItemListColor="@color/colorPrimaryDark"
                app:smsp_hintSize="16sp"
                app:smsp_itemSize="16sp" />

            <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
                android:id="@+id/sManufacturer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sType"
                app:smsp_isSearchable="true"
                app:smsp_enableSearchHeader="false"
                app:smsp_searchHint="@string/SEARCH"
                app:smsp_hint="@string/MANUFACTURER"
                app:smsp_selectedItemListColor="@color/colorPrimaryDark"
                app:smsp_hintSize="16sp"
                app:smsp_itemSize="16sp" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/DETAILS"
                android:text="@={viewmodel.detailsInput}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sManufacturer"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnSave"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> viewmodel.onSaveClick()}"
                android:padding="20dp"
                android:text="@string/SAVE"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:visible="@{viewmodel.loading}">

            <include
                layout="@layout/loading"
                app:transparent="@{true}" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
