<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.polsl.yerbapp.presentation.ui.explore.product_preview.ProductPreviewViewModel" />
    </data>

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/tvTypeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/TYPE"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:id="@+id/tvManufacturerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/tvTypeLabel"
                app:layout_constraintTop_toBottomOf="@id/tvTypeLabel"
                android:text="@string/MANUFACTURER"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:id="@+id/tvCountryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/tvManufacturerLabel"
                app:layout_constraintTop_toBottomOf="@id/tvManufacturerLabel"
                android:text="@string/COUNTRY"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:id="@+id/tvType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tvTypeLabel"
                app:layout_constraintBottom_toBottomOf="@id/tvTypeLabel"
                android:text="@{viewmodel.productType.name}"
                android:textSize="16sp"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/tvManufacturer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tvManufacturerLabel"
                app:layout_constraintBottom_toBottomOf="@id/tvManufacturerLabel"
                android:text="@{viewmodel.productManufacturer.name}"
                android:textSize="16sp"
                android:layout_marginStart="5dp" />

            <TextView
                android:id="@+id/tvCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@+id/tvCountryLabel"
                app:layout_constraintBottom_toBottomOf="@id/tvCountryLabel"
                android:text="@{viewmodel.productManufacturer.country}"
                android:textSize="16sp"
                android:layout_marginStart="5dp" />


            <TextView
                android:id="@+id/tvDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@+id/tvCountryLabel"
                app:layout_constraintTop_toBottomOf="@id/tvCountry"
                android:text="@{viewmodel.product.details}"
                android:textSize="15sp"
                android:layout_marginTop="8dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>
